<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <dev.oneuiproject.oneui.preference.SeekBarPreferencePro
        android:key="reader_speed_preset"
        android:max="10"
        android:persistent="false"
        android:summary="@string/scroll_speed_preset_summary"
        android:title="@string/scroll_speed_preset_title"
        app:adjustable="true"
        app:min="2"
        app:seekBarMode="level_bar"
        app:showTickMark="true" />

    <EditTextPreference
        android:key="reader_speed_custom"
        android:persistent="false"
        android:summary="@string/scroll_speed_custom_summary"
        android:title="@string/scroll_speed_custom_title" />

</PreferenceScreen>
